# streaming-clusters-denstream

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  tree.txt
.github/workflows/: ci.yml  frontend-ci.yml
docker/frontend/: Dockerfile
scripts/: pre_commit_checks.sh  pre_push_checks.sh
src/clustering_api/: config.yaml
src/clustering_api/src/: app.py  config.py  main.py
src/clustering_api/src/adapters/: base_clusterer.py  denstream_clusterer.py
src/clustering_api/src/controllers/: clustering_controller.py  health_controller.py  logs_controller.py  metrics_controller.py  nyc_taxi_controller.py  stream_controller.py
src/clustering_api/src/models/: data_models.py
src/clustering_api/src/services/: denstream_service.py  hdbscan_service.py  metrics_service.py  nyc_taxi_service.py  stream_service.py
src/clustering_api/src/utils/: drift_tracker.py  latency.py  logging_utils.py
src/clustering_api/tests/: test_cluster_models.py  test_denstream_service.py  test_drift_tracker.py  test_hdbscan_service.py  test_logging_utils.py  test_metrics_service.py  test_nyc_taxi_service.py  test_stream_controller.py  test_stream_service.py
src/clustering_api/tests/functional/: __init__.py  test_clustering_streams.py
src/frontend/: api_client.py  app.py  history.py  plotting.py
src/frontend/src/: api_client.py  app.py  history.py  plotting.py  utils.py
src/frontend/src/frontend/: api_client.py  history.py  plotting.py
src/frontend/tests/: test_api_client.py  test_history.py  test_logs_parsing.py  test_metrics_model.py  test_plotting.py
tests/frontend/: test_api_client.py  test_plotting.py
