[project]
name = "streaming-clusters-denstream"
version = "0.1.0"
description = "Streaming clustering API using DenStream and online algorithms."
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "hdbscan",
    "tqdm",
    "river",
    "plotly",
    "loguru",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "pyaml_env",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "ipykernel",
]

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clustering_api"]
exclude = ["src/frontend"]
