[project]
name = "streaming-clusters-denstream"
version = "0.1.0"
description = "Streaming clustering API using DenStream and online algorithms."
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "hdbscan",
    "tqdm",
    "river",
    "plotly",
    "httpx",
    "streamlit",
    "loguru",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "pyaml_env",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "ipykernel",
]

[tool.ruff]
select = ["E", "F"]
ignore = [
    "S101", "D", "TRY003"
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"**/tests/**/test_*.py" = ["ANN", "D", "PLR2004"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clustering_api"]
exclude = ["src/frontend"]
